# riskmai-backend

./: .env.backup  .env.example  .gitignore  AI_INTEGRATION_GUIDE.md  FRONTEND_API_GUIDE.md  README.md  USER_GUIDE.md  app.py  pyproject.toml
blueprints/: analysis.py  companies.py  documents.py
services/: firebase_service.py  gcs_service.py  news_service.py
terraform/: README.md  main.tf  terraform.tfvars.example  variables.tf
